<resources>
    <string name="app_name">Railchat</string>
    <string name="action_settings">Settings</string>
    <string name="title_travel_Settings">Your Travels</string>
    <string name="title_activity_main_menue">Main Menu</string>

    <string name="myTravels">My Travels</string>
    <string name="settings">Settings</string>
    <string name="title_section3">Section 3</string>

    <string name="chatId">ChatId</string>
    <string name="chatName">ChatName</string>

    <string name="send_message">Send</string>

    <string name="add_button">Add</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_railchat_main_menue">railchat_main_menue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="travel_today">Where are you heading to today?</string>
    <string name="login">Login</string>

    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="date_text">Date</string>
    <string name="station_to">To</string>
    <string name="station_from">From</string>
    <string name="time_text">Time</string>
    <string name="date_hint">Pick date</string>
    <string name="station_to_hint">Destination</string>
    <string name="station_from_hint">Origin</string>
    <string name="train_hint">pick train</string>
    <string name="train_text">Train</string>
    <string name="new_travel_save">Save</string>
    <string name="new_travel_date_title">When will you get going?</string>
    <string name="new_travel_train_title">Which train do you want to take?</string>
    <string name="new_travel_stations_title">Where do you want to go?</string>
    <string name="new_travel_save_title">Do you want to save this travel?</string>
    <string name="new_travel_listitem_persons_text">Persons</string>
    <string name="travel_menue_message_no_travels">You dont have any Travels saved. :(</string>

    <string name="travel_delete_title">Delete Travel</string>
    <string name="travel_delete_message">Are you sure you want to delete this Travel?</string>
    <string name="travel_delete_all_message">Are you sure you want to clear all Travels?</string>

    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>

    <string name="message_no_date_picked">Please pick date</string>
    <string name="message_no_station_picked">Please pick two legit stations</string>

    <string name="facebook_application_id" translatable="false">920790128018530</string>
    <string name="title_activity_railchat__my__travels__menu__test">Railchat_My_Travels_Menu_Test
    </string>
    <string name="title_activity_railchat__new__travel">Add New Travel</string>
    <string name="title_activity_my__travels">My Travels</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_my_travels_menu">My Travels</string>
    <string name="title_activity_settings">Settings</string>

    <string name="board_title">Title</string>
    <string name="board_link">Link</string>
    <string name="board_new_add">Add</string>
    <string name="board_new_start">Add a new post</string>
    <string name="board_new_back">Back</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_chat">Chat</string>


</resources>
